--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,14 @@ body {
     font-family: 'Lexend Deca', sans-serif;
 }
 
+main {
+    height: calc(100vh - 66px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 66px;
+}
+
 .container {
     width: 910px;
     margin: 0 auto;
@@ -22,6 +30,11 @@ h2 {
 
 h3 {
     font-size: 2.9rem;
+    font-weight: 500;
+}
+
+h4 {
+    font-size: 5rem;
     font-weight: 500;
 }
 
